@@ -1,0 +1,34 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<addon id="metadata.common.YoutubeTrailers" 
+       name="Youtube trailers common scraper functions"
+       version="1.0.2" 
+       provider-name="ZackDepp">
+  <requires>
+    <import addon="xbmc.metadata" version="1.0"/>
+  </requires>
+  <extension point="xbmc.metadata.scraper.library" library="youtube.xml"/>
+  <extension point="xbmc.addon.metadata">
+    <summary lang="en">Youtbe Trailers Scraper Library</summary>
+    <summary lang="de">Scraper für Trailer von Youtube</summary>
+    <summary lang="es">Scraper de Trailers de Youtube</summary>
+    <summary lang="fr">Scraper Youtube pour les bande-annonces</summary>
+    <summary lang="hu">Youtube leolvasó-könyvtár</summary>
+    <summary lang="nl">Youtube Scraper Collectie</summary>
+    <summary lang="pl">Scraper zwiastunów Youtube</summary>
+    <summary lang="pt">Scraper de trailers de Youtube</summary>
+    <summary lang="ru">?????????? ??? ????????? ? Youtube</summary>
+    <summary lang="zh">Youtube??????</summary>
+    <description lang="en">Download SD Movie Trailers from youtube</description>
+    <description lang="de">Downloade Trailer von www.Youtube</description>
+    <description lang="es">Descarga trailers de www.Youtube</description>
+    <description lang="fr">Télécharge les bande-annonces de films depuis www.Youtube</description>
+    <description lang="hu">Filmel?zetesek letöltése a www.Youtube-r?l</description>
+    <description lang="nl">Download trailers van www.Youtube</description>
+    <description lang="pl">Pobieraj zwiastuny filmowe z www.Youtube</description>
+    <description lang="pt">Descarregar trailers de www.Youtube</description>
+    <description lang="ru">????????? ???????? ? www.Youtube</description>
+    <description lang="zh">?www.Youtube???????</description>
+    <minversion>20000</minversion>
+    <platform>all</platform>
+  </extension>
+</addon>
