@@ -1,0 +1,82 @@
+<scraperfunctions>
+    <GetYoutubeTrailer dest="3">
+    <RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;ParseSDTrailer&quot; cache=&quot;youtubetrailers-\1.xml&quot;&gt;http://www.youtube.com/results?search_query=%22\1%22+$$9+trailer+hd+-peek+-remake+-deutsch+-fan-made&amp;search_duration=short&amp;hl=fr-FR&amp;persist_hl=1&lt;/url&gt;&lt;/details&gt;" dest="3">
+
+      <RegExp input="$$6" output="\1%C3%A0\2" dest="6">
+        <RegExp input="$$6" output="\1%C3%A2\2" dest="6">
+          <RegExp input="$$6" output="\1%C3%AA\2" dest="6">
+            <RegExp input="$$6" output="\1%C3%B4\2" dest="6">
+              <RegExp input="$$6" output="\1%C3%B9\2" dest="6">
+                <RegExp input="$$6" output="\1%C3%BB\2" dest="6">
+                  <RegExp input="$$6" output="\1%C3%A7\2" dest="6">
+                    <RegExp input="$$6" output="\1%C3%A9\2" dest="6">
+                      <RegExp input="$$6" output="\1%C3%A8\2" dest="6">
+                        <RegExp input="$$6" output="\1\2" dest="6">
+                          <RegExp input="$$6" output="\1+\2" dest="6">
+                            <RegExp input="$$6" output="\1+\2" dest="6">
+                              <RegExp input="$$6" output="\1+\2" dest="6">
+                                <RegExp input="$$6" output="\1+\2" dest="6">
+                                  <RegExp input="$$6" output="\1+\2" dest="6">
+                                    <RegExp input="$$6" output="\1+\2" dest="6">
+                                      <RegExp input="$$6" output="\1+\2" dest="6">
+                                        <RegExp input="$$6" output="\1+\2" dest="6">
+                                          <RegExp input="$$6" output="\1+\2" dest="6">
+                                            <RegExp input="$$6" output="\1+\2" dest="6">
+
+                                              <RegExp input="$$1" output="\1" dest="6">
+                                                <expression>(.+?)=(.+)</expression>
+                                              </RegExp>
+
+                                              <expression repeat="yes">(.+?)\s(.+)</expression>
+                                            </RegExp>
+                                            <expression repeat="yes">(.+?)\s(.+)</expression>
+                                          </RegExp>
+                                          <expression repeat="yes">(.+?)\s(.+)</expression>
+                                        </RegExp>
+                                        <expression repeat="yes">(.+?)\s(.+)</expression>
+                                      </RegExp>
+                                      <expression repeat="yes">(.+?)\s(.+)</expression>
+                                    </RegExp>
+                                    <expression repeat="yes">(.+?)\s(.+)</expression>
+                                  </RegExp>
+                                  <expression repeat="yes">(.+?)\s(.+)</expression>
+                                </RegExp>
+                                <expression repeat="yes">(.+?)\s(.+)</expression>
+                              </RegExp>
+                              <expression repeat="yes">(.+?)\s(.+)</expression>
+                            </RegExp>
+                            <expression repeat="yes">(.+?)\s(.+)</expression>
+                          </RegExp>
+                          <expression repeat="yes">(.+?):(.+)</expression>
+                        </RegExp>
+                        <expression repeat="yes">(.+?)&amp;#xE8;(.+)</expression>
+                      </RegExp>
+                      <expression repeat="yes">(.+?)&amp;#xE9;(.+)</expression>
+                    </RegExp>
+                    <expression repeat="yes">(.+?)&amp;#xE0;(.+)</expression>
+                  </RegExp>
+                  <expression repeat="yes">(.+?)&amp;#xE2;(.+)</expression>
+                </RegExp>
+                <expression repeat="yes">(.+?)&amp;#xEA;(.+)</expression>
+              </RegExp>
+              <expression repeat="yes">(.+?)&amp;#xF4;(.+)</expression>
+            </RegExp>
+            <expression repeat="yes">(.+?)&amp;#xF9;(.+)</expression>
+          </RegExp>
+          <expression repeat="yes">(.+?)&amp;#xFB;(.+)</expression>
+        </RegExp>
+        <expression repeat="yes">(.+?)&amp;#xE7;(.+)</expression>
+      </RegExp>
+      <RegExp input="$$1" output="\2" dest="9">
+        <expression>(.+)=(.+)</expression>
+      </RegExp>
+    <expression noclean="1"/>
+    </RegExp>
+    </GetYoutubeTrailer>
+  <ParseSDTrailer dest="5">
+  <!--Fetch trailer link-->
+  <RegExp input="$$1" output="&lt;details&gt;&lt;trailer&gt;plugin://plugin.video.youtube/?action=play_video&amp;videoid=\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
+    <expression noclean="1">&lt;h3.*?&gt;&lt;a href="/watch\?v=(.*?)"</expression>
+  </RegExp>
+  </ParseSDTrailer>
+</scraperfunctions>
