@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.imdb.com"
        name="IMDb"
-        version="2.2.6"
+        version="2.3.0"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -10,6 +10,7 @@
     <import addon="metadata.common.imdb.com" version="2.1.2"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
     <import addon="metadata.common.hdtrailers.net" version="1.0.6"/>
+    <import addon="metadata.common.youtubetrailers" version="1.0.2"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="en"
@@ -17,21 +18,21 @@
   <extension point="xbmc.addon.metadata">
     <summary lang="en">IMDB Movie Scraper</summary>
     <summary lang="hu">IMDB filmadat leolvasó</summary>
-    <summary lang="kr">IMDB 영화 스크래퍼</summary>
+    <summary lang="kr">IMDB ?? ????</summary>
     <summary lang="nl">IMDB film Scraper</summary>
     <summary lang="pl">Scraper filmów IMDb</summary>
     <summary lang="pt">Scraper de filmes IMDb</summary>
     <summary lang="se">IMDB Filmskrapa</summary>
     <description lang="en">Download Movie information from www.imdb.com
 The Internet Movie Database (IMDb) is a HUGE collection of movie information. They try to catalog every pertinent detail about a movie, from who was in it, to who made it, to trivia about it, to filming locations, and even where you can find reviews and fan sites on the web. They then do their best to present this information in a manner that is easy to search and access.</description>
-    <description lang="hu">Film információk letöltése a www.imdb.com webhelyről.
-Az Internet Film Adatbázis (IMDb) egy hatalmas film információ gyüjtemény. Itt megpróbálják katalogizálni a filmek minden egyes apró részletét a szereplőktől a készítőkön át, a forgatási helyszínekig, még azt is, hogy hol találsz leírásokat fan oldalakat a web-en az adott filmről. Mindezt úgy téve, hogy az információ egyszerűen elérhető és könnyen kereshető legyen.</description>
-    <description lang="kr">www.imdb.com 에서 영화 정보를 다운로드
-The Internet Movie Database (IMDb) 는 거대한 영화 정보를 가지고 있습니다. IMDB는 누구 출연 했는지, 누가 만들었는지, 촬영장소, 리뷰가 있는 곳, 팬사이트 같은 모든 세부적인 정보를 수집하고 있습니다. 그리고 검색과 사용이 편리하도록 정보를 보여주고 있습니다.</description>
+    <description lang="hu">Film információk letöltése a www.imdb.com webhelyr?l.
+Az Internet Film Adatbázis (IMDb) egy hatalmas film információ gyüjtemény. Itt megpróbálják katalogizálni a filmek minden egyes apró részletét a szerepl?kt?l a készít?kön át, a forgatási helyszínekig, még azt is, hogy hol találsz leírásokat fan oldalakat a web-en az adott filmr?l. Mindezt úgy téve, hogy az információ egyszer?en elérhet? és könnyen kereshet? legyen.</description>
+    <description lang="kr">www.imdb.com ?? ?? ??? ????
+The Internet Movie Database (IMDb) ? ??? ?? ??? ??? ????. IMDB? ?? ?? ???, ?? ?????, ????, ??? ?? ?, ???? ?? ?? ???? ??? ???? ????. ??? ??? ??? ????? ??? ???? ????.</description>
     <description lang="nl">Download film informatie van www.imdb.com
 De Internet Movie Database (IMDB) bevat een GIGANTISCHE collectie aan filminformatie. Ze proberen elk pertinent detail van elke film te catalogeren: wie er meespeelde, de makers, weetjes rond de film, film locatie en zelf waar je extra reviews en fansites kunt vinden. Ze doen hun best om al deze gegevens weer te geven in een zeer toegankelijke manier.</description>
     <description lang="pl">Pobieraj informacje o filmach z www.imdb.com
-IMDb jest POTĘŻNĄ kolekcją informacji o filmach. Serwis zajmuje się gromadzeniem każdych (nawet najdrobniejszych) informacji o filmach.</description>
+IMDb jest POT??N? kolekcj? informacji o filmach. Serwis zajmuje si? gromadzeniem ka?dych (nawet najdrobniejszych) informacji o filmach.</description>
     <description lang="pt">Descarregar informação de filmes de www.imdb.com
 A Internet Movie Database (IMDb) é uma coleccção enorme de informação de filmes. Tentam catalogar cada detalhe pertinente sobre um filme, quem actuou nele, quem o produziu, curiosidades sobre o filme, locais de filmagem e até mesmo onde pode encontrar críticas e clubes de fans na Internet. A organização de todos os dados é de procura fácil, permitindo um rápido acesso a todos os detalhes.</description>
     <description lang="se">Ladda ner filminformation från www.imdb.com
