@@ -6,6 +6,7 @@
     <string id="30002">Poszter letöltés a themoviedb.org-ról</string>
     <string id="30003">Poszter letöltés az IMPAwards-ról</string>
     <string id="30004">Poszter letöltés a MoviePosterDB-ról</string>
+    <string id="30004">Filmelőzetes közvetlenül a YouTube-ról</string>
     <string id="30006">Filmelőzetes a HD-Trailers.net-ről</string>
     <string id="30007">IMDb poszter &amp; színész bélyegképek mérete</string>
     <string id="30008">Filmcím a következő országból:</string>
