@@ -1,3 +1,6 @@
+[B]2.3.0[/B]
+- added: option to scrape trailer links directly from YouTube, credits to ZackDepp
+
 [B]2.2.6[/B]
 - fixed: Originaltitle some time contains 'IMDb - ' string
 
